--- a/lição/30.09/style.css
+++ b/lição/30.09/style.css
@@ -1,5 +1,26 @@
 body{
-    background-color: rgba(0, 110, 255, 0.397);
-    color: rgb(0, 29, 66);
+    background-color: #280072;
+    color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
+}
+body {
+    font-family: Arial, sans-serif;
+}
+form {
+    margin-bottom: 12px;
+}
+input {
+    margin-right: 11px;
+    padding: 5px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+table, th, td {
+    border: 2px solid #ffffff;
+}
+th, td {
+    padding: 10px;
+    text-align: left;
 }
